updated the training procedure

--- a/Project1-Diabetic_Ret.ipynb
+++ b/Project1-Diabetic_Ret.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +174,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to plot images before and after preprocessing\n",
+    "def plot_images(ext,par_dir,mode):\n",
+    "\n",
+    "    image_names = [par_dir+'19_right'+ext,par_dir+'214_left'+ext,\n",
+    "                   par_dir+'219_left'+ext,par_dir+'2275_left'+ext,\n",
+    "                   par_dir+'2031_right'+ext]\n",
+    "\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    gs1 = gridspec.GridSpec(4, 4)\n",
+    "    gs1.update(wspace=0.025, hspace=0.05)\n",
+    "\n",
+    "    for i in range(len(image_names)):\n",
+    "        image = mpimg.imread(image_names[i])\n",
+    "        plt.subplot(3,2,i+1)\n",
+    "        plt.axis('off')\n",
+    "        plt.imshow(image)\n",
+    "        if mode == 'before_preprocessing':\n",
+    "            plt.text(15,-125,'{}'.format(Label_names[i]),fontsize=15)\n",
+    "        elif mode == 'after_preprocessing':\n",
+    "            plt.text(15,-15,'{}'.format(Label_names[i]),fontsize=15)\n",
+    "        else:\n",
+    "            raise ValueError('Please enter proper mode')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot images of each class before preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -190,24 +227,11 @@
    ],
    "source": [
     "# Visualizing images from each class. The images were obtained after manually checking the dataset\n",
-    "\n",
     "ext = '.jpeg'\n",
-    "par_dir = 'projects/Train/train/'\n",
+    "par_dir = 'projects/Images/Train'\n",
+    "mode = 'before_preprocessing'\n",
     "\n",
-    "image_names = [par_dir+'19_right'+ext,par_dir+'214_left'+ext,\n",
-    "               par_dir+'219_left'+ext,par_dir+'2275_left'+ext,\n",
-    "               par_dir+'2031_right'+ext]\n",
-    "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "gs1 = gridspec.GridSpec(4, 4)\n",
-    "gs1.update(wspace=0.025, hspace=0.05)\n",
-    "\n",
-    "for i in range(len(image_names)):\n",
-    "    image = mpimg.imread(image_names[i])\n",
-    "    plt.subplot(3,2,i+1)\n",
-    "    plt.axis('off')\n",
-    "    plt.imshow(image)\n",
-    "    plt.text(15,-125,'{}'.format(Label_names[i]),fontsize=15)"
+    "plot_images(ext,par_dir,mode)"
    ]
   },
   {
@@ -247,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot images after preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -296,23 +327,12 @@
     }
    ],
    "source": [
-    "# Visulazing the same images as above after preprocessing\n",
-    "\n",
+    "# Visualizing images from each class. The images were obtained after manually checking the dataset\n",
     "ext = '.jpeg'\n",
-    "par_dir = 'projects/Processed_images/'\n",
+    "par_dir = 'projects/Images/Processed_Images'\n",
+    "mode = 'before_preprocessing'\n",
     "\n",
-    "image_names = [par_dir+'19_right'+ext,par_dir+'214_left'+ext,\n",
-    "               par_dir+'219_left'+ext,par_dir+'2275_left'+ext,\n",
-    "               par_dir+'2031_right'+ext]\n",
-    "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "\n",
-    "for i in range(len(image_names)):\n",
-    "    image = mpimg.imread(image_names[i])\n",
-    "    plt.subplot(3,2,i+1)\n",
-    "    plt.axis('off')\n",
-    "    plt.imshow(image)\n",
-    "    plt.text(15,-10,'{}'.format(Label_names[i]),fontsize=15)"
+    "plot_images(ext,par_dir,mode)"
    ]
   },
   {
@@ -324,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +376,8 @@
     "\n",
     "validation_dataset = DiabeticRetinopathyDataset(csv_file = 'projects/trainLabels.csv',\n",
     "                                              root_dir = 'projects/Images/Processed_images/',\n",
-    "                                              transform = valid_transforms)"
+    "                                              transform = valid_transforms)\n",
+    "\n"
    ]
   },
   {
@@ -368,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,21 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "\n",
-    "# adapted from fast ai\n",
-    "\n",
     "fc  = nn.Sequential(OrderedDict([\n",
     "                                ('batchnorm1',nn.BatchNorm1d(2048,eps=1e-05,momentum=0.1,affine=True)),\n",
-    "                                ('dropout1',nn.Dropout(p=0.5)),\n",
+    "                                ('dropout1',nn.Dropout(p=0.25)),\n",
     "                                ('fc1',nn.Linear(2048,512,bias=True)),\n",
     "                                ('batchnorm2',nn.BatchNorm1d(512,eps=1e-05,momentum=0.1,affine=True)),\n",
     "                                ('relu',nn.ReLU()),\n",
-    "                                ('dropout2',nn.Dropout(p=0.6)),\n",
+    "                                ('dropout2',nn.Dropout(p=0.25)),\n",
     "                                ('fc2',nn.Linear(512,5,bias=True)),\n",
     "                                ('output',nn.LogSoftmax(dim=1))\n",
     "                                ]))\n",
@@ -468,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -653,24 +672,23 @@
        "  )\n",
        "  (fc): Sequential(\n",
        "    (batchnorm1): BatchNorm1d(2048, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (dropout1): Dropout(p=0.5)\n",
+       "    (dropout1): Dropout(p=0.25)\n",
        "    (fc1): Linear(in_features=2048, out_features=512, bias=True)\n",
        "    (batchnorm2): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    (relu): ReLU()\n",
-       "    (dropout2): Dropout(p=0.6)\n",
+       "    (dropout2): Dropout(p=0.25)\n",
        "    (fc2): Linear(in_features=512, out_features=5, bias=True)\n",
        "    (output): LogSoftmax()\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# architecture after changing the last layer\n",
     "model"
    ]
   },
@@ -683,7 +701,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Adamw import AdamW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +728,8 @@
     "\n",
     "criterion = nn.CrossEntropyLoss().to(device)\n",
     "\n",
-    "optimizer = optim.Adam(model.fc.parameters(),lr=0.001)\n",
+    "# introducing weight decay\n",
+    "optimizer = AdamW(model.fc.parameters(),lr=0.0001)\n",
     "\n",
     "exp_lr_scheduler = lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)"
    ]
@@ -715,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,14 +793,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def training(n_epochs,criterion,model,device,scheduler):\n",
     "    \n",
-    "    best_model_wts = copy.deepcopy(model.state_dict())\n",
-    "   \n",
+    "    \n",
     "    for epoch in tqdm(range(n_epochs)):\n",
     "        \n",
     "        running_loss = 0\n",
@@ -811,7 +838,7 @@
     "                    'state_dict': model.state_dict(),\n",
     "                    'optimizer': optimizer.state_dict(),\n",
     "                }\n",
-    "        torch.save(state, 'model_checkpoint.pth')\n",
+    "        torch.save(state, 'model_checkpoint1.pth')\n",
     "    \n",
     "    return model\n",
     "        \n",
@@ -820,18 +847,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf8365529a3746cb9e575201cdba1036",
+       "model_id": "50c92ffb17694964a9ea9a1c9513dba9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=25), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=9), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -841,47 +868,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/25 | Training loss =  1.307 | Validation_loss =  1.382 | Kappa_score 0.262\n",
-      "Epoch 2/25 | Training loss =  1.251 | Validation_loss =  1.406 | Kappa_score 0.246\n",
-      "Epoch 3/25 | Training loss =  1.232 | Validation_loss =  1.308 | Kappa_score 0.298\n",
-      "Epoch 4/25 | Training loss =  1.222 | Validation_loss =  1.259 | Kappa_score 0.307\n",
-      "Epoch 5/25 | Training loss =  1.222 | Validation_loss =  1.288 | Kappa_score 0.309\n",
-      "Epoch 6/25 | Training loss =  1.205 | Validation_loss =  1.272 | Kappa_score 0.318\n",
-      "Epoch 7/25 | Training loss =  1.206 | Validation_loss =  1.288 | Kappa_score 0.319\n",
-      "Epoch 8/25 | Training loss =  1.186 | Validation_loss =  1.252 | Kappa_score 0.338\n",
-      "Epoch 9/25 | Training loss =  1.177 | Validation_loss =  1.246 | Kappa_score 0.335\n",
-      "Epoch 10/25 | Training loss =  1.180 | Validation_loss =  1.224 | Kappa_score 0.341\n",
-      "Epoch 11/25 | Training loss =  1.178 | Validation_loss =  1.259 | Kappa_score 0.327\n",
-      "Epoch 12/25 | Training loss =  1.171 | Validation_loss =  1.211 | Kappa_score 0.357\n",
-      "Epoch 13/25 | Training loss =  1.171 | Validation_loss =  1.232 | Kappa_score 0.345\n",
-      "Epoch 14/25 | Training loss =  1.173 | Validation_loss =  1.217 | Kappa_score 0.348\n",
-      "Epoch 15/25 | Training loss =  1.176 | Validation_loss =  1.266 | Kappa_score 0.323\n",
-      "Epoch 16/25 | Training loss =  1.172 | Validation_loss =  1.229 | Kappa_score 0.343\n",
-      "Epoch 17/25 | Training loss =  1.172 | Validation_loss =  1.249 | Kappa_score 0.334\n",
-      "Epoch 18/25 | Training loss =  1.170 | Validation_loss =  1.243 | Kappa_score 0.330\n",
-      "Epoch 19/25 | Training loss =  1.165 | Validation_loss =  1.241 | Kappa_score 0.337\n",
-      "Epoch 20/25 | Training loss =  1.165 | Validation_loss =  1.240 | Kappa_score 0.337\n",
-      "Epoch 21/25 | Training loss =  1.165 | Validation_loss =  1.277 | Kappa_score 0.317\n",
-      "Epoch 22/25 | Training loss =  1.164 | Validation_loss =  1.234 | Kappa_score 0.339\n",
-      "Epoch 23/25 | Training loss =  1.163 | Validation_loss =  1.232 | Kappa_score 0.338\n",
-      "Epoch 24/25 | Training loss =  1.172 | Validation_loss =  1.242 | Kappa_score 0.336\n",
-      "Epoch 25/25 | Training loss =  1.169 | Validation_loss =  1.224 | Kappa_score 0.350\n"
+      "Epoch 1/9 | Training loss =  1.292 | Validation_loss =  1.135 | Kappa_score 0.401\n",
+      "Epoch 2/9 | Training loss =  1.202 | Validation_loss =  1.028 | Kappa_score 0.415\n",
+      "Epoch 3/9 | Training loss =  1.184 | Validation_loss =  0.971 | Kappa_score 0.459\n",
+      "Epoch 4/9 | Training loss =  1.173 | Validation_loss =  0.948 | Kappa_score 0.474\n",
+      "Epoch 5/9 | Training loss =  1.155 | Validation_loss =  0.954 | Kappa_score 0.488\n",
+      "Epoch 6/9 | Training loss =  1.150 | Validation_loss =  1.026 | Kappa_score 0.467\n",
+      "Epoch 7/9 | Training loss =  1.141 | Validation_loss =  0.972 | Kappa_score 0.487\n",
+      "Epoch 8/9 | Training loss =  1.133 | Validation_loss =  0.978 | Kappa_score 0.487\n",
+      "Epoch 9/9 | Training loss =  1.134 | Validation_loss =  1.011 | Kappa_score 0.473\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Training the networks\n",
-    "num_epochs = 25\n",
+    "num_epochs = 9\n",
     "final_model = training(num_epochs,criterion,model,device,exp_lr_scheduler )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.save(final_model.state_dict(),'final_model_weights.pth')"
    ]
   },
   {
