updated the testing procedure

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pranavsm24/.local/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skll.metrics import kappa"
    ]
@@ -49,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "state_dict = torch.load('model_checkpoint.pth')\n",
+    "state_dict = torch.load('model_checkpoint1.pth')\n",
     "\n",
     "model = models.resnet50(pretrained=True)\n",
     "for params in model.parameters():\n",
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "## Loading the DataLoader\n",
     "\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1a6841aac244d2a904618a96a626a38",
+       "model_id": "a16b370a8bf9412183a366a5aa7dea4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,13 +168,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -202,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The final kappa score on the test set is = 0.360\n"
+      "The final kappa score on the test set is = 0.429\n"
      ]
     }
    ],
@@ -220,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -228,19 +221,46 @@
      "output_type": "stream",
      "text": [
       "Cl Act Pre\n",
-      "0 39533 21307\n",
-      "1 3762 15259\n",
-      "2 7861 9652\n",
-      "3 1214 4284\n",
-      "4 1206 3074\n"
+      "0 39533 37601\n",
+      "1 3762 6465\n",
+      "2 7861 2142\n",
+      "3 1214 4130\n",
+      "4 1206 3238\n"
      ]
     }
    ],
    "source": [
+    "# Error Analysis\n",
     "print('Cl','Act','Pre')\n",
     "for i in range(5):\n",
     "    print(i,all_true_labels.count(i),all_predictions.count(i))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_names = pd.read_csv('projects/Test/retinopathy_solution.csv')\n",
+    "dataframe = pd.DataFrame({'image': image_names['image'], 'level': all_predictions})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe.to_csv('submi.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
